Adding main bank page

--- a/html/login.html
+++ b/html/login.html
@@ -69,7 +69,7 @@
                     <input id="password" type="password">
                 </label>
                 <div class="col-sm-4 messages"></div>
-                <button type="submit" class="submit">Sing Up!</button>
+                <button type="submit" class="submit" onclick="Main_App()">Sing Up!</button>
             </div>
         </div>
     </div>
