--- a/html/login.html
+++ b/html/login.html
@@ -8,20 +8,26 @@
 </head>
 <body>
     <div class="cont">
-        <div id="sign" class="form">
-            <h2>Bienvenido Entrenador!</h2>
-            <label>
-                <span>Usuario</span>
-                <input type="text" name="usename">
-            </label>
-            <label>
-                <span>PokeCode</span>
-                <input type="password" name="PokeCode">
-            </label>
-            <button class="submit" type="button" >Catch'em all!</button>
+        <form id="sign" class="form">
+            <div class="form-group row mb-0">
+                <div class="col-sm-8 md-form px-0">
+                    <h2>Bienvenido Entrenador!</h2>
+                    <input id="username" autofocus class="form-control" type="text" name="username">
+                    <label for="username" class="control-label">Usuario</label>
+                </div>
+            <div class="col-sm-4 messages"></div>
+            </div>
+            <div class="form-group row mb-0">
+                <div class="col-sm-8 md-form px-0">                    
+                    <input id="password" class="form-control" type="password" name="password">
+                    <label for="password" class="control-label">PokeCode</label>
+                </div>
+            <div class="col-sm-4 messages"></div>
+            <button class="submit" type="button" >Catch ' em all!</button>
             <p class="forgot-code"> Olvidaste tu PokeCode ?</p>
-        </div>
-        
+            </div>
+        </form>
+
         <div class="sub-cont">
             <div class="img">
                 <div class="img-text m-up">
@@ -37,42 +43,63 @@
                     <span class="m-in">Sign In</span>
                 </div>
             </div>
-            <div id="signup" class="form sign-up">
-                <h2>Sign Up</h2>
-                <label>
-                    <span>Nombre Entrenador</span>
-                    <input id="name" type="text">
-                </label>
+
+            <form id="signup" class="form sign-up" action="/HTML/main.html" method="post" novalidate>
+                <div class="form-group row mb-0">
+                    <div class="col-sm-8 md-form px-0">
+                        <h2>Sigue tu camino Pokemon!</h2>
+                        <input id="name" autofocus class="form-control" type="text" name="name">
+                        <label for="name" class="control-label">Nombre Entrenador</label>
+                    </div>
+                    <div class="col-sm-4 messages"></div>
+                </div>
+                <div class="form-group row mb-0">
+                    <div class="col-sm-8 md-form px-0">
+                        <input id="username" class="form-control" type="text" name="username">
+                        <label for="username" class="control-label">Usuario</label>
+                    </div>
                 <div class="col-sm-4 messages"></div>
-                <label>
-                    <span>Email</span>
-                    <input id="email" type="email">
-                </label>
-                <div class="col-sm-4 messages"></div>
-                <label>
-                    <span>Fecha de cumpleaños</span>
-                    <input id="birthdate" class="form-control" type="date" placeholder="YYYY-MM-DD" name="birthdate">
-                </label>
-                <div class="col-sm-4 messages"></div>
-                <label>
-                    <span>Pokename</span>
-                    <input id="username" type="text">
-                </label>
-                <div class="col-sm-4 messages"></div>
-                <label>
-                    <span>PokeCode</span>
-                    <input id="password" type="password">
-                </label>
-                <div class="col-sm-4 messages"></div>
-                <label>
-                    <span>Confirmar PokeCode</span>
-                    <input id="password" type="password">
-                </label>
-                <div class="col-sm-4 messages"></div>
-                <button type="submit" class="submit" onclick="Main_App()">Sing Up!</button>
-            </div>
+                </div>
+                <div class="form-group row mb-0">
+                    <div class="col-sm-8 md-form px-0">                    
+                        <input id="email" class="form-control" type="email" name="email">
+                        <label for="email" class="control-label">Email</label>
+                    </div>
+                    <div class="col-sm-4 messages"></div>
+                </div>
+                <div class="form-group row mb-0">
+                    <div class="col-sm-8 md-form px-0">
+                        <input id="password" class="form-control" type="password" name="password">
+                        <label for="password" class="control-label">PokeCode</label>
+                    </div>
+                    <div class="col-sm-4 messages"></div>
+                </div>
+                <div class="form-group row mb-0">
+                    <div class="col-sm-8 md-form px-0">                    
+                        <input id="confirm-password" class="form-control" type="password" name="confirm-password">
+                        <label for="confirm-password" class="control-label">Confirma PokeCode</label>
+                    </div>
+                    <div class="col-sm-4 messages"></div>
+                </div>
+                <div class="form-group row mb-0">
+                    <div class="col-sm-8 md-form px-0">
+                      <input id="birthdate" class="form-control" type="date" placeholder="YYYY-MM-DD" name="birthdate">
+                      <label class="control-label" for="birthdate">Fecha de cumpleaños</label>
+                    </div>
+                    <div class="col-sm-4 messages"></div>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="submit" >Sing Up!</button>
+                </div>
+            </form>
         </div>
     </div>
+     <!-- Optional libraries I am using in this tutorial -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>
+  <!-- Core MDB elements -->
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"> </script>
     <script type="text/javascript" src="/Scripts/LoginScript.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>
