--- a/html/login.html
+++ b/html/login.html
@@ -12,18 +12,18 @@
             <div class="form-group row mb-0">
                 <div class="col-sm-8 md-form px-0">
                     <h2>Bienvenido Entrenador!</h2>
-                    <input id="username" autofocus class="form-control" type="text" name="username">
+                    <input id="usernamesign" autofocus class="form-control" type="text" name="username">
                     <label for="username" class="control-label">Usuario</label>
                 </div>
             <div class="col-sm-4 messages"></div>
             </div>
             <div class="form-group row mb-0">
                 <div class="col-sm-8 md-form px-0">                    
-                    <input id="password" class="form-control" type="password" name="password">
+                    <input id="passwordsign" class="form-control" type="password" name="password">
                     <label for="password" class="control-label">PokeCode</label>
                 </div>
             <div class="col-sm-4 messages"></div>
-            <button class="submit" type="button" >Catch ' em all!</button>
+            <button class="submit" type="button" onclick="login()">Catch ' em all!</button>
             <p class="forgot-code"> Olvidaste tu PokeCode ?</p>
             </div>
         </form>
@@ -97,11 +97,12 @@
      <!-- Optional libraries I am using in this tutorial -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <!-- Core MDB elements -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"> </script>
-    <script type="text/javascript" src="/Scripts/LoginScript.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>
+    <script type="text/javascript" src="/Scripts/LoginScript.js"></script>
 </body>
 </html>
