--- a/html/login.html
+++ b/html/login.html
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group row mb-0">
                 <div class="col-sm-8 md-form px-0">                    
-                    <input id="passwordsign" class="form-control" type="password" name="password">
+                    <input id="passwordsign" class="form-control" type="password" inputmode="numeric" name="password" pattern="[0-9]+" onkeydown="javascript: return event.keyCode == 69 ? false : true">
                     <label for="password" class="control-label">PokeCode</label>
                 </div>
             <div class="col-sm-4 messages"></div>
