--- a/html/login.html
+++ b/html/login.html
@@ -12,15 +12,15 @@
             <div class="form-group row mb-0">
                 <div class="col-sm-8 md-form px-0">
                     <h2>Bienvenido Entrenador!</h2>
-                    <input id="usernamesign" autofocus class="form-control" type="text" name="username">
-                    <label for="username" class="control-label">Usuario</label>
+                    <input id="usernamesign" autofocus class="form-control" type="text" name="usernamesign">
+                    <label for="usernamesign" class="control-label">Usuario</label>
                 </div>
             <div class="col-sm-4 messages"></div>
             </div>
             <div class="form-group row mb-0">
                 <div class="col-sm-8 md-form px-0">                    
-                    <input id="passwordsign" class="form-control" type="password" inputmode="numeric" name="password" pattern="[0-9]+" onkeydown="javascript: return event.keyCode == 69 ? false : true">
-                    <label for="password" class="control-label">PokeCode</label>
+                    <input id="passwordsign" class="form-control" type="password" inputmode="numeric" name="passwordsign" pattern="[0-9]+" onkeydown="javascript: return event.keyCode == 69 ? false : true">
+                    <label for="passwordsign" class="control-label">PokeCode</label>
                 </div>
             <div class="col-sm-4 messages"></div>
             <button class="submit" type="button" onclick="login()">Catch ' em all!</button>
