--- a/html/main.html
+++ b/html/main.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PokeBank-Account</title>
     <link rel="stylesheet" href="/CSS/mainpage.css">
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 </head>
 <body>
 
@@ -24,7 +27,7 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="#" onclick="printPDF()">Transaction History</a>
-        <a class="nav-item nav-link" href="#">Charts</a>
+        <a class="nav-item nav-link" href="#"><canvas id="myChart" style="width:100%;max-width:700px"></canvas>Charts</a>
       </div>
     </div>
   </nav>
@@ -105,8 +108,21 @@
         </div>
     </div>
 
+<script>
+    const ctx = document.getElementById('myChart').getContext('2d')
+    const chart = new Chart(ctx, {
+  type: 'line',
+  data: {
+      labels: [],
+      datasets: [{
+          
+      }]
+  },
+  options: {}
+});
+</script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="/Scripts/MainScript.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"> </script>
     
 </body>
